# backend-rust-webchecker

./: Cargo.toml  Optimization.xlsx  demo.xlsx
src/: constants.rs  main.rs
src/resources/: 1000websites.txt  100websites.txt  11websites.txt  few website.txt
src/utils/: read_file.rs  screenshot.rs  status_checker.rs
