[package]
name = "rust_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# API
rocket = "0.5.0-rc.3"
serde_derive = "1.0"

rocket_codegen = "0.4.9"
rocket_cors = "0.6.0-alpha2"
serde = { version = "1.0.99", features = ["derive"] }


reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
rust_xlsxwriter = "0.42.0"
headless_chrome = "1.0.5"

tokio-sync = "0.1"
futures = "0.3"
chrono = "0.4.0"

anyhow = "1.0.9"

num_cpus = "1.9.0"

crossbeam = "0.8.2"
rocket_contrib = "0.4.9"

# DOWN API
serde_json = "1.0.103"
regex = "1.9.1"

